# A2A

./: .gitignore  BIDIRECTIONAL_IMPROVEMENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  HTTPS_SETUP_GUIDE.md  README.md  README_BIDIRECTIONAL.md  README_HTTPS.md  a2a_schema.config  agent1_config.toml  agent1_debug_config.toml  agent2_config.toml  agent2_debug_config.toml  agent3_config.toml  agent_gamma_config.toml  agent_pids.txt  agent_registry_config.toml  agent_registry_config.toml.bak  agent_remember_config.toml  agent_target_config.toml  bidirectional_agent.toml  bidirectional_agent_readme.md  build.rs  cross-compile.md  docker-guide.md  fix_certbot_permissions.sh  invalid_message.json  repomix-output.xml  run_agent.bat  run_bidirectional.sh  run_delegation_demo.sh  run_remember_agent_demo.sh  run_three_agents.sh  run_two_agents_debug.sh  server-checklist.md  setup_certbot.sh  setup_https_dev.sh  start_server_and_test_client.sh  test_agent_registry.sh  (+2 more)
.clinerules/: CLAUDE.md
.github/workflows/: release.yml
data/: agent1_directory.json  agent2_directory.json  agent3_directory.json  agent_directory.db  agent_registry.json
docs/: A2A_dev_docs.md  agent_registry.md  bidirectional_agent_remaining_tasks.md  bidirectional_server_plan.txt  cargo_typify.md  changes.txt  cors_support.md  keep_going.md  llm_configuration.md  mockito_rust_lib.md  phase1_design_unified_routing.md  phase1_remote_tool_execution.md  remaining_tasks.txt  remove_unofficial.txt  repl_client.md  rolling_memory.md  schema_overview.md  testing_plan.md
proptest-regressions/: property_tests.txt
public/: index.html
schemas/: a2a_schema_v2.json
scripts/: test_agent_registry.sh  test_remote_agent_registry.sh
src/: agent_tester.rs  bidirectional_agent.rs  client_tests.rs  fuzzer.rs  lib.rs  main.rs  mock_server.rs  property_tests.rs  repl_client.rs  repl_client.rs.backup  repl_client.rs.fixed  runner.rs  schema_utils.rs  types.rs  validator.rs
src/bidirectional/: README.md  agent_helpers.rs  agent_registry.rs  bidirectional_agent.rs  bin.rs  config.rs  https_support.rs  llm_client.rs  mod.rs  registry_router.rs  task_router.rs  task_router.rs.bak
src/bidirectional/repl/: commands.rs  mod.rs
src/bidirectional/tests/: README.md  agent_card_tests.rs  agent_directory_tests.rs  agent_tests.rs  artifact_tests.rs  config_tests.rs  input_required_remote_tests.rs  input_required_tests.rs  memory_isolation_tests.rs  memory_tests.rs  mocks.rs  mod.rs  repl_commands_tests.rs  repl_tests.rs  router_tests.rs  server_static_files_test.rs  session_tests.rs  task_rejection_tests.rs  task_service_tests.rs  toml_agent_card_test.rs
src/bidirectional_agent/: agent_directory.rs  agent_registry.rs  agent_tester.rs  client_manager.rs  config.rs  content_negotiation.rs  error.rs  integration_tests.rs  mod.rs  protocol_router.rs  push_notification.rs  repl_client.rs  result_synthesis.rs  sse_formatter.rs  standard_parts.rs  state_history.rs  streaming.rs  task_extensions.rs  task_flow.rs  task_flow_helpers.rs  task_metadata.rs  task_router.rs  task_router_llm.rs  task_router_llm_refactored.rs  task_router_unified.rs  test_utils.rs  tool_executor.rs  types.rs
src/bidirectional_agent/llm_core/: README.md  claude.rs  integration.rs  llm_client.rs  mock.rs  mod.rs  template.rs
src/bidirectional_agent/llm_core/prompts/: decomposition.txt  routing_decision.txt  should_decompose.txt  synthesize_results.txt
src/bidirectional_agent/llm_core/tests/: mod.rs  template_tests.rs
src/bidirectional_agent/llm_routing/: claude_client.rs  mod.rs
src/bidirectional_agent/migrations/: 20250429000001_initial_schema.sql
src/bidirectional_agent/tests/: core.rs  delegation.rs  directory.rs  integration.rs  local_exec.rs  mod.rs  property.rs
src/bidirectional_agent/tools/: directory_tool.rs  http_tool.rs  mod.rs  shell_tool.rs  special_tool.rs
src/bidirectional_agent/tools/pluggable/: mod.rs
src/client/: README.md  agent_skills.rs  artifacts.rs  auth.rs  cancel_task.rs  data_operations.rs  error_handling.rs  errors.rs  file_operations.rs  mod.rs  push_notifications.rs  state_history.rs  streaming.rs  task_batch.rs  tests.rs
src/client/tests/: dynamic_streaming_test.rs  error_handling_test.rs  integration_test.rs  mod.rs  state_machine_test.rs
src/server/: agent_registry.rs  client_manager.rs  error.rs  mod.rs  task_flow.rs  task_router.rs  tool_executor.rs
src/server/handlers/: mod.rs
src/server/repositories/: task_repository.rs
src/server/services/: mod.rs  notification_service.rs  streaming_service.rs  task_service.rs
src/server/tests/: cors_test.rs  mod.rs  tool_executor_tests.rs
src/server/tests/handlers/: jsonrpc_handler_test.rs  mod.rs
src/server/tests/integration/: mod.rs  server_integration_test.rs
src/server/tests/repositories/: mod.rs  task_repository_test.rs
src/server/tests/services/: mod.rs  notification_service_test.rs  streaming_service_test.rs  task_service_test.rs
