[package]
name = "a2a-test-suite"
version = "0.1.0"
edition = "2021"

[features]
default = []
# Bidirectional Agent Features (Incremental)
bidir-core = ["dep:tokio", "dep:dashmap", "dep:async-trait", "dep:anyhow", "dep:thiserror", "dep:toml", "dep:log", "dep:env_logger", "dep:tokio-util"]
bidir-local-exec = ["bidir-core"] # Depends on core features
bidir-delegate = ["bidir-local-exec"] # Depends on local execution features
# Fuzzing Feature
fuzzing = ["dep:libfuzzer-sys"]

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
lazy_static = "1.4.0"

# For JSON Schema validation
jsonschema = "0.17.0"

# For property testing
proptest = "1.0"

# For mock server & runner
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full", "process"] } # Add "process" feature
colored = "2.0" # For colored output in runner

# For fuzzing
arbitrary = { version = "1.1", features = ["derive"] }
libfuzzer-sys = { version = "0.4", optional = true }
rand = "0.8.5"

# A2A-specific dependencies
chrono = { version = "0.4", features = ["serde"] }
url = { version = "2.3", features = ["serde"] }

# For client implementation
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"], default-features = false } # Enable rustls-tls
mockito = "1.2"
futures = "0.3"
futures-util = "0.3"
bytes = "1.4"
uuid = { version = "1.4", features = ["v4", "serde"] }
eventsource-stream = "0.2"
tokio-stream = "0.1"
base64 = "0.21.0"
mime_guess = "2.0.4"
tempfile = "3.10" # For creating temporary files/dirs in tests
# serde_json is already a dependency
once_cell = "1.17"
sha2 = "0.10"
http = "1.3.1" # Changed from 0.2 to 1.3.1

# Bidirectional Agent Dependencies (Optional)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "signal"], optional = true } # Added sync, time, signal
dashmap = { version = "5", optional = true }
async-trait = { version = "0.1.88", optional = true }
log = { version = "0.4", optional = true }
env_logger = { version = "0.11", optional = true }
anyhow = { version = "1.0", optional = true }
thiserror = { version = "1.0", optional = true }
toml = { version = "0.8", optional = true }
tokio-util = { version = "0.7.15", features = ["full"], optional = true } # Make optional

[build-dependencies]
sha2 = "0.10"
# reqwest and serde_json are no longer needed *only* here
