[package]
name = "a2a-test-suite"
version = "0.1.0"
edition = "2021"

[features]
default = []
# Fuzzing Feature
fuzzing = ["dep:libfuzzer-sys"]

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
lazy_static = "1.4.0"

# For JSON Schema validation
jsonschema = "0.17.0"

# For property testing
proptest = "1.0"

# For mock server & runner
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full", "process", "rt-multi-thread", "macros", "time", "sync", "signal"] } # Combined features
colored = "2.0" # For colored output in runner

# For fuzzing
arbitrary = { version = "1.1", features = ["derive"] }
libfuzzer-sys = { version = "0.4", optional = true }
rand = "0.8.5"

# For Agent Directory (SQLite)
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "macros", "chrono", "json"] }

# For remote tool support
dyn-clone = "1.0"

# A2A-specific dependencies
chrono = { version = "0.4", features = ["serde"] }
url = { version = "2.5", features = ["serde"] } # Updated version and kept serde feature

# For client implementation
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"], default-features = false } # Enable rustls-tls
mockito = "1.2"
futures = "0.3"
futures-util = "0.3"
bytes = "1.4"
uuid = { version = "1.4", features = ["v4", "serde"] }
eventsource-stream = "0.2"
tokio-stream = "0.1"
base64 = "0.21.0"
mime_guess = "2.0.4"
tempfile = "3.10" # For creating temporary files/dirs in tests
# serde_json is already a dependency
once_cell = "1.17"
sha2 = "0.10"
http = "1.3.1" # Changed from 0.2 to 1.3.1

# Bidirectional Agent Dependencies
# tokio is already defined above with different features
dashmap = { version = "5" }
async-trait = { version = "0.1.88" }
log = { version = "0.4" }
env_logger = { version = "0.11" }
anyhow = { version = "1.0" }
thiserror = { version = "1.0" }
toml = "0.8"
tokio-util = { version = "0.7", features = ["rt", "codec", "io"] } # Required for CancellationToken and BytesCodec
tokio-rustls = "0.23"
rustls = "0.20"
rustls-pemfile = "1.0"
rustyline = "15.0.0"
fs2 = "0.4.3"
indicatif = "0.17.11"
jsonwebtoken = "8.3.0" # For push notifications
mime = "0.3.17" # For content negotiation
# mime_guess = "2.0.4" # For guessing MIME types of static files <- Removed duplicate
tracing = "0.1.37" # For improved logging
tracing-appender = "0.2" # For logging to files
async-stream = "0.3.5" # For SSE streaming
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "registry", "fmt"] } # Add features
regex = "1.10.3" # For URL extraction in task router
tracing-core = "0.1.33"

[build-dependencies]
sha2 = "0.10"
# reqwest and serde_json are no longer needed *only* here

[dev-dependencies] # Add dev-dependencies section if it doesn't exist
tempfile = "3.10" # Already present in main dependencies, but good practice for test-only utils
mockito = "1.2" # Already present in main dependencies
tokio-test = "0.4" # For blocking on async calls in tests if needed
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"], default-features = false } # For making test HTTP requests

[[bin]]
name = "bidirectional-agent"
path = "src/bidirectional/bin.rs"

